--- a/styles/components/dropdowns.css
+++ b/styles/components/dropdowns.css
@@ -4,7 +4,7 @@
 .dropdown {
   @apply hidden z-50;
   .dropdown-title {
-    @apply py-2 px-3 text-sm font-bold font-sans uppercase;
+    @apply py-2 px-3 text-sm font-semibold font-sans uppercase;
   }
   .dropdown-content {
     @apply rounded-md shadow-lg;
