change logo, handle marquee change currency

--- a/styles/components/left-sidebar/styles-lg.css
+++ b/styles/components/left-sidebar/styles-lg.css
@@ -60,6 +60,16 @@
         span {
           @apply invisible opacity-0;
         }
+        a {
+          div {
+            div {
+              @apply min-w-max;
+              img {
+                @apply w-8;
+              }
+            }
+          }
+        }
       }
     }
   }
