finish public companies, styling

--- a/styles/components/left-sidebar/styles-lg.css
+++ b/styles/components/left-sidebar/styles-lg.css
@@ -88,7 +88,7 @@
         width: 0;
       }
     }
-    &.open-sibling {
+    &.open-sibling & [data-collapsed="false"] {
       @apply text-blue-500;
       &:after {
         content: "";
