adjust score, styling

--- a/styles/components/dropdowns.css
+++ b/styles/components/dropdowns.css
@@ -6,6 +6,9 @@
   .dropdown-title {
     @apply py-2 px-3 text-sm font-semibold font-sans uppercase;
   }
+  .dropdown-title-trending {
+    @apply py-1 px-2.5;
+  }
   .dropdown-content {
     @apply rounded-md shadow-lg;
   }
