--- a/styles/global.css
+++ b/styles/global.css
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap");
 /*@import url("https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.4.6/css/flag-icon.min.css");*/
 
+html {
+  scroll-behavior: smooth;
+}
+
 h1 {
   @apply text-5xl;
 }
