handle menu click event

--- a/styles/components/left-sidebar/styles-lg.css
+++ b/styles/components/left-sidebar/styles-lg.css
@@ -257,3 +257,13 @@
     }
   }
 }
+
+@media (max-width: 1366px) {
+  [data-collapsed="true"] {
+    .hidden-sibling {
+      + ul {
+        @apply hidden;
+      }
+    }
+  }
+}
