--- a/styles/global.css
+++ b/styles/global.css
@@ -117,6 +117,11 @@ button {
   min-height: .75rem !important;
 }
 
+.slick-dots {
+  position: static !important;
+  padding-bottom: 0.5rem !important;
+}
+
 /**
  * hide scrollbars
  */
