--- a/styles/components/tables.css
+++ b/styles/components/tables.css
@@ -27,8 +27,11 @@
       @apply px-6 py-3;
     }
   }
-  .watchlist-column {
+  .nopadding-column {
     @apply px-0;
+  }
+  .nopadding-right-column {
+    @apply pr-0;
   }
 }
 
