--- a/styles/components/tables.css
+++ b/styles/components/tables.css
@@ -1,5 +1,8 @@
 .table {
-  @apply block lg:table overflow-x-scroll;
+  @apply block lg:inline-table overflow-x-scroll;
+  &.inline-table {
+    display: inline-table;
+  }
   @apply w-full table-auto;
   &.no-border thead tr th,
   &.no-border tbody tr td {
